# text2image

./: .env.dev  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  change.md  feature.md  survey.md
.github/workflows/: code-review.yml  pytest.yml
app/: main.py
app/utils/: __init__.py  config.py  log.py
config/: order.yml
src/: __init__.py  __main__.py
src/config/: message.ini
src/image_creator/: __init__.py
src/image_creator/model/: __init__.py  base.py  flux.py  info.py
src/image_creator/utils/: __init__.py  error.py  huggingface.py  setup.py
src/text2image/: __init__.py
src/text2image/config/: message.ini
src/text2image/model/: __init__.py  base.py  flux.py  info.py
src/text2image/utils/: __init__.py  error.py  gpu_monitor.py  huggingface.py  setup.py
tests/: test_error.py  test_flux_normal.py  test_generate.py  test_huggingface.py  test_t2i.py  test_t2i_error.py
text_to_image/: __init__.py  main.py
text_to_image/api/: model.py
text_to_image/order/: order.py
text_to_image/utils/: __init__.py  config.py  log.py  yml.py
