[tool.poetry]
name = "text-to-image"
version = "0.1.2"
description = "Generate images from text"
authors = ["Kodai YAMASHITA <nglcobdai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
pytz = "^2024.1"
diffusers = {extras = ["torch"], version = "^0.30.2"}
transformers = "^4.44.2"
nglcobdai-utils = {git = "https://github.com/nglcobdai/nglcobdai-utils.git", branch = "feature/nglcobdai_utils" }


[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
